[package]
authors = ["Thomas Bahn <thomas@thomas-bahn.net>"]
description = "A SCRAM provider library."
documentation = "https://docs.rs/scram"
keywords = [ "scram", "authentication"]
license = "MIT"
name = "scram"
readme = "README.md"
repository = "https://github.com/tomprogrammer/scram"
version = "0.6.0"

[dependencies]
base64 = "0.22"
rand = "0.8.5"
ring = "0.17.7"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "https://github.com/tomprogrammer/scram", branch = "master" }
