[package]
authors = ["Thomas Bahn <thomas@thomas-bahn.net>", "Aljaž Mur Eržen <aljaz@edgedb.com>"]
description = "A SCRAM provider library."
documentation = "https://docs.rs/scram"
keywords = [ "scram", "authentication"]
license = "MIT"
name = "scram-2"
readme = "README.md"
repository = "https://github.com/tomprogrammer/scram"
version = "0.6.0"

[dependencies]
base64 = "0.22"
rand = "0.8.5"
ring = "0.17.7"
